style: reorder HTTP endpoints
